--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+mmSpCf0Qzp+fvwTbEc/Q",
+      "authorship_tag": "ABX9TyN9ehPzR90dOSgw78a3fc5O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,29 @@
       "outputs": [],
       "source": [
         "x = 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "rsQmN2krQZBk",
+        "outputId": "d1a72cd8-ea10-4570-c839-872903ab8ceb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
       ]
     }
   ]
