Colaboratory를 통해 생성됨

--- a/syntax.ipynb
+++ b/syntax.ipynb
@@ -75,7 +75,7 @@
         "for i in range(len(a)):\n",
         "    print(a[i])"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +102,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -230,7 +230,7 @@
         "        if j >=4:\n",
         "            print(i*j)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,7 +308,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "dict comprehension"
+        "dict comprehension. list와달리 순서 상관x, 앞에 key로 고르는ㄴ거니까"
       ],
       "metadata": {
         "id": "yJLnlDz6NDGQ"
