--- a/syntax.ipynb
+++ b/syntax.ipynb
@@ -65,7 +65,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "XSJxLJVCSLAW",
-        "outputId": "638f1c75-6e15-4795-de33-e5c610c07a0a",
+        "outputId": "2fb76f45-a876-481d-d545-87373621efa5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -73,9 +73,9 @@
       "source": [
         "a= [1, 2, 3, 4]\n",
         "for i in range(len(a)):\n",
-        "    print(a[i])"
+        "    print(a[i]) # print(a) 가 아니라 a[i]라서 1~4."
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +92,34 @@
     {
       "cell_type": "code",
       "source": [
-        "for i in range(1,5):\n",
+        "for i in range(4):\n",
+        "  print(i)  # 0~3"
+      ],
+      "metadata": {
+        "id": "nXnGw03EX6Ok",
+        "outputId": "384ef47f-1169-40eb-ee7f-bf16e0f0c754",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1,5):  #range(시작숫자, 5 전까지)\n",
         "  print(i)"
       ],
       "metadata": {
@@ -174,7 +201,7 @@
       },
       "source": [
         "a = 0\n",
-        "if a == 0:\n",
+        "if a == 0:   #일치하다equal : ==\n",
         "    print(a)\n",
         "else:\n",
         "    print(a+1)"
@@ -197,8 +224,8 @@
         "outputId": "b25a5fe6-defa-4549-85b0-0c146ff7a2a0"
       },
       "source": [
-        "for i in range(1, 3):\n",
-        "    for j in range(3, 5):\n",
+        "for i in range(1, 3):  #1 2\n",
+        "    for j in range(3, 5):  # 3 4\n",
         "        print(i*j)"
       ],
       "execution_count": null,
@@ -308,7 +335,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "dict comprehension. list와달리 순서 상관x, 앞에 key로 고르는ㄴ거니까"
+        "dict comprehension. list와달리 **순서 상관x**, 앞에 key로 고르는ㄴ거니까"
       ],
       "metadata": {
         "id": "yJLnlDz6NDGQ"
@@ -319,27 +346,27 @@
       "source": [
         "a = ['red', 'green', 'blue', 'purple']\n",
         "b = [1, 2, 3, 4]\n",
-        "c = {a[i]:b[i] for i in range(4)}\n",
+        "c = {a[i]:b[i] for i in range(4)}  #range(4) = 0 1 2 3\n",
         "c"
       ],
       "metadata": {
         "id": "Z6JMoDOHu48B",
-        "outputId": "2bf14607-9cf5-40be-d60b-b7cbda48c2a8",
+        "outputId": "637027ca-a699-418d-fdba-0cc056ad929b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'blue': 3, 'green': 2, 'purple': 4, 'red': 1}"
+              "{'red': 1, 'green': 2, 'blue': 3, 'purple': 4}"
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 7
         }
       ]
     }
