Colaboratory를 통해 생성됨

--- a/string.ipynb
+++ b/string.ipynb
@@ -49,7 +49,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "zwpWU02YmAur",
-        "outputId": "5aba833a-75a5-44f5-ac0d-658b4d43c092",
+        "outputId": "3f493cf9-e525-44c3-d89d-98ba1a20eaf0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -58,16 +58,18 @@
         "s = 'abcdef'\n",
         "print(s[0], s[5], s[-1], s[-6])\n",
         "print(s[1:3], s[1:], s[:3], s[:])\n",
+        "print(s[0:3])  # 0부터 3자리 하나전까지!\n",
         "len(s)"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "a f f a\n",
-            "bc bcdef abc abcdef\n"
+            "bc bcdef abc abcdef\n",
+            "abc\n"
           ]
         },
         {
@@ -78,7 +80,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 1
         }
       ]
     },
@@ -90,7 +92,7 @@
       },
       "source": [
         "n = [100, 200, 300]\n",
-        "print(n[0], n[2], n[-1], n[-3])\n",
+        "print(n[0], n[2], n[-1], n[-3])   #n[-1] = 300맨뒤\n",
         "print(n[1:2], n[1:], n[:2], n[:])\n",
         "len(n)"
       ],
