Colaboratory를 통해 생성됨

--- a/string.ipynb
+++ b/string.ipynb
@@ -61,7 +61,7 @@
         "print(s[0:3])  # 0부터 3자리 하나전까지!\n",
         "len(s)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,24 +264,27 @@
       "cell_type": "code",
       "metadata": {
         "id": "l37g5DqQmAu2",
-        "outputId": "c1eefe2c-0edc-4678-c67b-b8306ca13471"
+        "outputId": "4737f748-ac8d-46cd-d340-77351c5a08de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "tokens = s.split(' ')\t        # split s into a list wherever a t is found (whitespace by default)\n",
         "# 단어만. 리스트로 출력해줌. space없애\n",
         "tokens"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['this', 'is', 'a', 'house', 'built', 'this', 'year.']"
+              "['abcdef']"
             ]
           },
-          "execution_count": 15,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 4
         }
       ]
     },
@@ -296,23 +299,30 @@
       "cell_type": "code",
       "metadata": {
         "id": "64sewKE8mAu2",
-        "outputId": "e2e8dc1f-6b83-41ef-b746-7712099f2776"
+        "outputId": "e5bc5115-3121-4f16-abd5-dc239d28863f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "s = ' '.join(tokens)\t        # combine the words of the text into a string using s as the glue\n",
         "s"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'this is a house built this year.'"
-            ]
+              "'abcdef'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "execution_count": 16,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 5
         }
       ]
     },
@@ -323,7 +333,7 @@
         "outputId": "13300aff-f13a-4f48-c6ec-cbc5d01dd55b"
       },
       "source": [
-        "s = s.replace('this', 'that') # replace instances of t with u inside s\n",
+        "s = s.replace('this', 'that') # replace instances of this inside s\n",
         "s"
       ],
       "execution_count": null,
@@ -339,6 +349,15 @@
           "output_type": "execute_result"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "I_vQ59PDgIgZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
