Colaboratory를 통해 생성됨

--- a/string.ipynb
+++ b/string.ipynb
@@ -49,7 +49,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "zwpWU02YmAur",
-        "outputId": "3f493cf9-e525-44c3-d89d-98ba1a20eaf0",
+        "outputId": "ede09388-f5a9-4bcd-a5b5-612e03f52169",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -61,7 +61,7 @@
         "print(s[0:3])  # 0부터 3자리 하나전까지!\n",
         "len(s)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,7 +80,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ]
     },
@@ -168,23 +168,30 @@
       "cell_type": "code",
       "metadata": {
         "id": "LRU0Yt1amAuz",
-        "outputId": "3fdbe8c7-9962-40ba-f624-2ac1aa2c7e44"
+        "outputId": "db28cd0c-59b7-4ef6-d3f5-4f9c0f1110b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "s = ' this is a house built this year.\\n'\n",
         "s"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "' this is a house built this year.\\n'"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "execution_count": 10,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 5
         }
       ]
     },
@@ -240,23 +247,30 @@
       "cell_type": "code",
       "metadata": {
         "id": "ua3TjwLcmAu2",
-        "outputId": "ac192f91-46ce-4ff0-a040-f0d63541124e"
+        "outputId": "8965d119-c302-4d2f-aa41-b47d3ac22789",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "s = s.strip()      \t          # a copy of s without leading or trailing whitespace\n",
         "s"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "'this is a house built this year.'"
-            ]
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "execution_count": 14,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 6
         }
       ]
     },
@@ -264,7 +278,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "l37g5DqQmAu2",
-        "outputId": "4737f748-ac8d-46cd-d340-77351c5a08de",
+        "outputId": "c1a34759-0c2f-4b2c-f2c5-e01f50f57cab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -274,17 +288,17 @@
         "# 단어만. 리스트로 출력해줌. space없애\n",
         "tokens"
       ],
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['abcdef']"
+              "['this', 'is', 'a', 'house', 'built', 'this', 'year.']"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 7
         }
       ]
     },
@@ -299,7 +313,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "64sewKE8mAu2",
-        "outputId": "e5bc5115-3121-4f16-abd5-dc239d28863f",
+        "outputId": "c5d9997a-7bd0-4133-db52-f8f1f613bb88",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -309,20 +323,20 @@
         "s = ' '.join(tokens)\t        # combine the words of the text into a string using s as the glue\n",
         "s"
       ],
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'abcdef'"
+              "'this is a house built this year.'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 8
         }
       ]
     },
@@ -349,15 +363,6 @@
           "output_type": "execute_result"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "I_vQ59PDgIgZ"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
